<resources>
    <string name="app_name">屏幕滤镜</string>
    <string name="action_settings">Fork me on GitHub</string>
    <string name="banner">完全黑暗中使用滤镜可进一步降低屏幕亮度保护视力\n日常使用时启用暖色系滤镜可抗蓝光防止视觉疲劳</string>
    <string name="brightness">屏幕亮度</string>
    <string name="transparency">滤镜浓度</string>
    <string name="filter_color">滤镜颜色</string>
    <string name="is_off">滤镜未开启 :(</string>
    <string name="is_on">滤镜已开启 :)</string>
    <string name="restore">恢复推荐配置</string>
    <string name="enable_filter">启用有色滤镜</string>
    <string name="license">开源许可</string>
    <string name="feedback">发送反馈(通过邮件)</string>
    <string name="keep_screen_on_toggle">开启滤镜时屏幕常亮</string>
    <string name="about">关于</string>
    <string name="positive">确定</string>
    <string name="brief_introduction">\"一款可配置的轻量级屏幕滤镜\"</string>
    <string name="gitHub_src_address">https://github.com/hwding/make-it-darker/tree/master/app/src/main</string>
    <string name="source_code">源码:&#160;</string>
    <string name="update_log">日志:&#160;</string>
    <string name="gitHub_readme_address">https://github.com/hwding/make-it-darker/blob/master/README.md</string>

    <!-- Licenses -->
    <string name="ColorSeekBar_title">ColorSeekBar</string>
    <string name="ColorSeekBar_license">DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE\nVersion 2, December 2004\nCopyright © 2004 Leon Fu [rtugeek@gmail.com]\nEveryone is permitted to copy and distribute verbatim or modified\ncopies of this license document, and changing it is allowed as long as the name is changed.\nDO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE\nTERMS AND CONDITIONS FOR COPYING, DISTRIBUTION AND MODIFICATION\n0. You just DO WHAT THE FUCK YOU WANT TO.</string>
    <string name="CircleSeekBar_title">CircleSeekBar</string>
    <string name="CircleSeekBar_license">PGSL\nplease give me star license</string>
</resources>
