<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">
    <item
        android:title="@string/keep_screen_on_toggle"
        android:id="@+id/keep_screen_on_toggle"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:checkable="true"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_restoreDefaultSettings"
        android:orderInCategory="100"
        android:title="@string/restore"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/ic_settings_backup_restore_white_24dp"/>
</menu>
