<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/cm"
    android:gravity="center_vertical"
    android:background="@drawable/night"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/activity_main" >

    <TextView
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/text_light_gray"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banner"
        android:textSize="15sp"/>

    <include layout="@layout/control_panel" />

    <ToggleButton
        android:id="@+id/cm_toggle_button"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/text_transparent_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/selector_turn_on_button"
        android:textOn="@string/is_on"
        android:textOff="@string/is_off"/>

    <Button
        android:id="@+id/cm_restore_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/text_transparent_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_restore_settings_button"
        android:text="@string/restore"/>
</LinearLayout>
