<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center_horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/text_light_gray"
            android:padding="2dp"
            android:background="@drawable/shape_text_tag"
            android:gravity="center_horizontal"
            android:layout_marginEnd="20dp"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/brightness"/>
        <SeekBar
            android:layout_gravity="center_vertical"
            android:layout_width="180dp"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/text_light_gray"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20%"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/text_light_gray"
            android:padding="2dp"
            android:background="@drawable/shape_text_tag"
            android:gravity="center_horizontal"
            android:layout_marginEnd="20dp"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/transparency"/>
        <SeekBar
            android:layout_gravity="center_vertical"
            android:layout_width="180dp"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/text_light_gray"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20%"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/text_light_gray"
            android:padding="2dp"
            android:background="@drawable/shape_text_tag"
            android:gravity="center_horizontal"
            android:layout_marginEnd="20dp"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/filter_color"/>
        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@color/yellow"/>
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@color/red"/>
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@color/brown"/>
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@color/gray"/>
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>